# passerine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Memo.md  Passerine.sln  README.md
Passerine/: Passerine.vcxproj  Passerine.vcxproj.filters
Passerine/src/: Passerine.h
Passerine/src/Passerine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Sandbox/: Sandbox.vcxproj
Sandbox/src/: Sandbox.cpp
include/: Audio.h  Easter.h  Physics.h  Render.h  WindowBase.h
src/: Easter.cpp  Render.cpp  WindowBase.cpp  main.cpp
